--- a/arta.html
+++ b/arta.html
@@ -15,7 +15,7 @@
     <tr>
 	<th style="height:60px; width:24%;"><a href="stiinta.html">
 	<h3 style="margin: 20px;">|Stiinta|</h3></a></th>
-    <th style="height:60px; width:34%;"><a href="index-02html">
+    <th style="height:60px; width:34%;"><a href="index02.html">
 	<h3 style="margin: 20px;">|Home|</h3></a></th>
     <th style="height:60px; width:54%; float:left;"><a href="tehnologie.html">
 	<h3 style="margin: 20px">|Tehnologie|</h3></a></th> 
